enable jemalloc in debian package

--- a/debian/control
+++ b/debian/control
@@ -87,6 +87,7 @@ Depends: binutils,
          ceph-common (= ${binary:Version}),
          cryptsetup-bin | cryptsetup,
          debianutils,
+         libjemalloc1,
          findutils,
          gdisk,
          grep,
